# batsim

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md
chemistries/: .gitkeep  lfp_26650_generic.toml  nmc_18650_generic.toml
crates/sim-core/: Cargo.toml
crates/sim-core/src/: chem.rs  ecm.rs  flags.rs  lib.rs  pack.rs
crates/sim-core/tests/: analytic_golden.rs  properties.rs  scatter.rs  scenario_weak_cell.rs  snapshot.rs  topology.rs
crates/sim-data/: Cargo.toml
crates/sim-data/src/: lib.rs
crates/sim-data/tests/: load.rs  pybamm_golden.rs
tests/golden/: .gitkeep
tests/golden/lfp_26650_generic/: cc_1c_25c.csv  cc_c20_25c.csv  pulse_relax_25c.csv
tools/reference/: .gitkeep  README.md  common.py  fit_ocv.py  generate.py  requirements.txt
