[package]
name = "sim-core"
version = "0.0.0"
description = "Pure, deterministic battery-pack simulation engine (no I/O, no async, no globals)."
edition.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Byte-exact serde format for the snapshot bit-identical replay test. Dev-only:
# the engine never depends on a concrete serialization format (adapters choose).
bincode = "1.3"
