[package]
name = "sim-data"
version = "0.0.0"
description = "TOML chemistry-parameter loading and validation for sim-core."
edition.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sim-core = { path = "../sim-core" }
toml = { workspace = true }
thiserror = { workspace = true }
